--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: blue;">  
     <h1 style="padding-top: 300px; 
     font-style:italic; 
     color:white; 
